@@ -1,6 +1,8 @@
 Revision history for Perl module App::Switchman
 
 1.10 2015-06-22
+    + data_read_len config option
+    * increased default data_read_len from 1Kb to 4Kb
 
 1.09 2015-06-15
     + --no-lock option
